Version 0.0.2

  * Possibility to add more account types
  * Add Transaction UI improve
  * Graph
  * Flickable bugfixes
  * Transaction sort fix
  * Transaction saldo fix

Version 0.0.1

  * First release